Fixed dark mode for Accordion component

--- a/web/src/components/Form/Accordion.css
+++ b/web/src/components/Form/Accordion.css
@@ -1,7 +1,6 @@
 .Accordion-container {
   width: 100%;
   overflow: hidden;
-  background-color: #1e293b;
   border-radius: 4px;
   border-color: #374151;
   border-width: 1px;
@@ -30,6 +29,5 @@
   rotate: 180deg;
 }
 .wrapper .answer-container {
-  /* padding: 8px 12px; */
   transition: height 0.4s ease-in-out;
 }
